Added Java opts for automatic garbage collection;