@@ -1,5 +1,7 @@
 #!/bin/bash
 
+export JAVA_OPTS="-Xms256m -Xmx1024m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled -Djava.net.preferIPv4Stack=true"
+
 if [ -n "$PASS" ]
 then
         echo publisher:$PASS | chpasswd
